feat: - added delete user api with cascading in both grpc and gin api - added proto code for accounts, entries and transfer money api - refactored some proto file schema to reduce code duplication
