# doc/swagger/simple_bank.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "rpc_entries.proto",
+    "title": "rpc_accounts.proto",
     "version": "version not set"
   },
   "tags": [
@@ -16,8 +16,78 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/accounts": {
+      "get": {
+        "operationId": "SimpleBank_GetAllAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbAccountList"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "pageNum",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      },
+      "post": {
+        "summary": "accounts service list",
+        "operationId": "SimpleBank_CreateAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbAccount"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbCreateAccountRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
     "/api/v1/accounts/{accountId}/entries": {
       "patch": {
+        "summary": "entries service list",
         "operationId": "SimpleBank_GetAllEntryForAccountID",
         "responses": {
           "200": {
@@ -55,6 +125,138 @@
         ]
       }
     },
+    "/api/v1/accounts/{id}": {
+      "get": {
+        "operationId": "SimpleBank_GetAccountByID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbAccount"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      },
+      "delete": {
+        "operationId": "SimpleBank_DeleteAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
+    "/api/v1/entries": {
+      "patch": {
+        "operationId": "SimpleBank_GetAllEntries",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbEntryListResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "pageNum",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
+    "/api/v1/transfer": {
+      "post": {
+        "summary": "transfer service list",
+        "operationId": "SimpleBank_TransferMoney",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbTransferMoneyResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbTransferMoneyRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
     "/api/v1/users": {
       "get": {
         "operationId": "SimpleBank_GetAllUser",
@@ -62,7 +264,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbGetAllUserResponse"
+              "$ref": "#/definitions/pbUserListResponse"
             }
           },
           "default": {
@@ -92,13 +294,43 @@
           "SimpleBank"
         ]
       },
+      "delete": {
+        "operationId": "SimpleBank_DeleteUser",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "username",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      },
       "post": {
+        "summary": "user service list",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbCreateUserResponse"
+              "$ref": "#/definitions/pbUser"
             }
           },
           "default": {
@@ -195,7 +427,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbGetUserResponse"
+              "$ref": "#/definitions/pbUser"
             }
           },
           "default": {
@@ -223,7 +455,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbUpdateUserResponse"
+              "$ref": "#/definitions/pbUser"
             }
           },
           "default": {
@@ -294,6 +526,11 @@
   "definitions": {
     "SimpleBankGetAllEntryForAccountIDBody": {
       "type": "object",
+      "properties": {
+        "pagination": {
+          "$ref": "#/definitions/pbPaginationReq"
+        }
+      },
       "title": "list all entries by account id schema"
     },
     "SimpleBankUpdateUserBody": {
@@ -310,6 +547,49 @@
         }
       },
       "title": "Update User Request and Response Schema"
+    },
+    "pbAccount": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "owner": {
+          "type": "string"
+        },
+        "currency": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "pbAccountList": {
+      "type": "object",
+      "properties": {
+        "accounts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbAccount"
+          }
+        }
+      }
+    },
+    "pbCreateAccountRequest": {
+      "type": "object",
+      "properties": {
+        "owner": {
+          "type": "string"
+        },
+        "currency": {
+          "type": "string"
+        }
+      },
+      "title": "create account req"
     },
     "pbCreateUserRequest": {
       "type": "object",
@@ -328,14 +608,6 @@
         }
       },
       "title": "Create User Request and Response Schema"
-    },
-    "pbCreateUserResponse": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "$ref": "#/definitions/pbUser"
-        }
-      }
     },
     "pbEntry": {
       "type": "object",
@@ -356,7 +628,8 @@
           "type": "string",
           "format": "date-time"
         }
-      }
+      },
+      "title": "single entry schema"
     },
     "pbEntryListResponse": {
       "type": "object",
@@ -367,26 +640,6 @@
             "type": "object",
             "$ref": "#/definitions/pbEntry"
           }
-        }
-      }
-    },
-    "pbGetAllUserResponse": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/pbUser"
-          }
-        }
-      }
-    },
-    "pbGetUserResponse": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "$ref": "#/definitions/pbUser"
         }
       }
     },
@@ -428,6 +681,86 @@
         }
       }
     },
+    "pbPaginationReq": {
+      "type": "object",
+      "properties": {
+        "pageNum": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "pageSize": {
+          "type": "string",
+          "format": "uint64"
+        }
+      },
+      "title": "pagination req"
+    },
+    "pbTransfer": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "fromAccountId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "toAccountId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "amount": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "pbTransferMoneyRequest": {
+      "type": "object",
+      "properties": {
+        "fromAccountId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "toAccountId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "amount": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "currency": {
+          "type": "string"
+        }
+      },
+      "title": "transfer money req and res"
+    },
+    "pbTransferMoneyResponse": {
+      "type": "object",
+      "properties": {
+        "transfer": {
+          "$ref": "#/definitions/pbTransfer"
+        },
+        "fromAccount": {
+          "$ref": "#/definitions/pbAccount"
+        },
+        "fromEntry": {
+          "$ref": "#/definitions/pbEntry"
+        },
+        "toAccount": {
+          "$ref": "#/definitions/pbAccount"
+        },
+        "toEntry": {
+          "$ref": "#/definitions/pbEntry"
+        }
+      }
+    },
     "pbUpdatePasswordRequest": {
       "type": "object",
       "properties": {
@@ -439,14 +772,6 @@
         }
       },
       "title": "Update User's Password Request and Response Schema"
-    },
-    "pbUpdateUserResponse": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "$ref": "#/definitions/pbUser"
-        }
-      }
     },
     "pbUser": {
       "type": "object",
@@ -476,6 +801,19 @@
         }
       },
       "title": "User Schema"
+    },
+    "pbUserListResponse": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbUser"
+          }
+        }
+      },
+      "title": "Get All User Request and Response Schema"
     },
     "pbVerifyEmailResponse": {
       "type": "object",
